issue with tooltip visibility/slider visibility

--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -47,6 +47,8 @@
     .banner__content {
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      text-align: center;
       padding: 3.75rem 0;
     }
 
@@ -57,7 +59,6 @@
 
       .banner__caption {
         position: absolute;
-        margin-left: 20px;
         
         h2 {
           text-align: left !important;
@@ -72,24 +73,24 @@
         }
       }
 
-      .banner__button {
-        position: absolute;
-        left: 150px !important;
-      }
+      // .banner__button {
+      //   position: absolute;
+      //   left: 150px !important;
+      // }
 
-      #start-btn {
-        left: 160px !important;
-      }
+      // #start-btn {
+      //   left: 160px !important;
+      // }
     }
   
     .banner__caption {
       position: absolute;
-      padding: 0 20px;
+      padding: 0;
       width: 100%;
       height: auto;
       bottom: 50%;
-      left: 50%;
-      transform: translateX(-50%);
+      // left: 50%;
+      // transform: translateX(-50%);
       color: $font-white;
       z-index: 5000;
   
@@ -123,10 +124,11 @@
   
     .banner__button {
       position: absolute;
-      display: inline-block;
+      display: flex;
+      justify-items: center;
       bottom: 40%;
-      left: 50%;
-      transform: translateX(-50%);
+      // left: 50%;
+      // transform: translateX(-50%);
       z-index: 5000;
       padding: 5px 20px;
       height: 65px;
